[project]
name = "umamusume-rag"
version = "0.1.0"
description = "RAG-only knowledge base toolkit"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dashscope==1.23.7",
    "faiss-cpu==1.11.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-openai>=0.3.5",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.2",
    "langchain-mcp-adapters>=0.1.8",
    "mcp>=1.10.1",
    "mcp-server>=0.1.4",
    "mineru[core]>=2.6.2",
    "openai>=1.75.0",
    "pydantic>=2.7.2",
    "python-dotenv>=1.0.1",
    "sentence-transformers==5.0.0",
    "torch==2.7.1",
    "uvicorn>=0.34.2",
    "pillow>=10.4.0",
    "transformers>=4.44.0",
    "markitdown",
    "huggingface-hub>=0.24.0",
    "pymupdf>=1.24.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "qwen-vl-utils>=0.0.14",
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-dir]
"" = "src" 

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
