[project]
name = "umamusume-rag"
version = "0.1.0"
description = "RAG-only knowledge base toolkit"
authors = [
    { name = "quantumxiaol" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Core RAG: local vector index + embedding runtime.
    "python-dotenv>=1.0.1",
    "langchain>=0.3.25",
    "langchain-core>=0.3.59",
    "langchain-community>=0.3.24",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu==1.11.0",
    "torch==2.7.1",
    "transformers>=4.44.0",
    "sentence-transformers==5.0.0",
    "langchain-huggingface>=0.1.2",
    "huggingface-hub>=0.24.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]

# HTTP/MCP service layer.
server = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "mcp>=1.10.1",
    "mcp-server>=0.1.4",
    "pydantic>=2.7.2",
    "langchain-mcp-adapters>=0.1.8",
]

# LLM answer generation / query expansion.
llm = [
    "langchain-openai>=0.3.0",
]

# PDF/document conversion engines. Install only the engines you actually use.
pdf-markitdown = [
    "markitdown",
]
pdf-docling = [
    "docling>=2.69.1",
]
pdf-mineru = [
    "mineru[core]>=2.6.2",
]
pdf-qwen-vl = [
    "pymupdf>=1.24.0",
    "qwen-vl-utils>=0.0.14",
    "pillow>=10.4.0",
]
pdf = [
    "markitdown",
    "docling>=2.69.1",
    "mineru[core]>=2.6.2",
    "pymupdf>=1.24.0",
    "qwen-vl-utils>=0.0.14",
    "pillow>=10.4.0",
]

# Backward-compatible alias for the old PDF/ETL extra.
etl = [
    "markitdown",
    "docling>=2.69.1",
    "mineru[core]>=2.6.2",
    "pymupdf>=1.24.0",
    "qwen-vl-utils>=0.0.14",
    "pillow>=10.4.0",
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

all = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "mcp>=1.10.1",
    "mcp-server>=0.1.4",
    "pydantic>=2.7.2",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=0.3.0",
    "markitdown",
    "docling>=2.69.1",
    "mineru[core]>=2.6.2",
    "pymupdf>=1.24.0",
    "qwen-vl-utils>=0.0.14",
    "pillow>=10.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-dir]
"" = "src" 

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
